adicionando menu responsivo

--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -1,33 +1,115 @@
 .header {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: center;
   margin: 20px;
   border: 1px solid #f2f2f2;
   border-radius: 50px;
-  padding: 15px 0px;
+  position: sticky;
+  top: 0;
+}
+.header nav {
+  position: fixed;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.8s ease-out;
+  background: #f2f2f2;
+  top: 125px;
+  right: 35px;
 }
 
 .header__logo {
+  display: inline-block;
   width: 70px;
-}
-
-.header__nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+  margin: 20px 0px 20px 20px;
 }
 
 .header__nav a {
-  margin-left: 20px;
-  font-size: 20px;
-  color: #f2f2f2;
+  margin: 25px 5px;
+  display: block;
+  padding: 10px 20px;
+  color: #5c6dd0;
   font-weight: 100;
+  font-size: 20px;
 }
 
 .header__nav a:hover {
-  padding-bottom: 5px;
-  border-bottom: 1px solid #5c6dd0;
+  background-color: none;
+  background-color: #5c6dd0;
+  color: #f2f2f2;
+}
+
+.responsiveMenuHamb {
+  cursor: pointer;
+  float: right;
+  padding: 40px 20px;
+}
+
+.responsiveMenuHamb__line {
+  background: #fff;
+  display: block;
+  height: 2px;
+  position: relative;
+  width: 35px;
+}
+
+.responsiveMenuHamb__line::before,
+.responsiveMenuHamb__line::after {
+  background: #fff;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
+}
+.responsiveMenuHamb__line::before {
+  top: 5px;
+}
+.responsiveMenuHamb__line::after {
+  top: -5px;
+}
+
+.responsiveMenu {
+  display: none;
+}
+
+.responsiveMenu:checked ~ nav {
+  max-height: 100%;
+}
+.responsiveMenu:checked ~ .responsiveMenuHamb .responsiveMenuHamb__line {
+  background: transparent;
+}
+.responsiveMenu:checked
+  ~ .responsiveMenuHamb
+  .responsiveMenuHamb__line::before {
+  transform: rotate(-45deg);
+  top: 0;
+}
+.responsiveMenu:checked ~ .responsiveMenuHamb .responsiveMenuHamb__line::after {
+  transform: rotate(45deg);
+  top: 0;
+}
+
+@media (min-width: 768px) {
+  .header nav {
+    max-height: none;
+    top: 0;
+    position: relative;
+    float: right;
+    width: fit-content;
+    background-color: transparent;
+  }
+  .header__nav li {
+    float: left;
+  }
+  .header__nav a {
+    color: #f2f2f2;
+  }
+
+  .header__nav a:hover {
+    border-bottom: 1px solid #5c6dd0;
+    background-color: transparent;
+  }
+
+  .responsiveMenuHamb {
+    display: none;
+  }
 }
