adicionei os diferenciais da empresa

--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -26,6 +26,53 @@
   color: #5c6dd0;
   font-size: 60px;
 }
+.diferenciais {
+  background: linear-gradient(
+    180deg,
+    #011126 0%,
+    #42628c 56.59%,
+    #5c6dd0 101.54%
+  );
+}
+.diferenciais__title h2 {
+  padding: 70px 0;
+  margin: 20px 0;
+  text-align: center;
+  font-weight: 200;
+  font-size: 40px;
+}
+.diferenciais__title span {
+  color: #a0c3d9;
+  font-weight: 700;
+}
+.diferenciais__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding-bottom: 200px;
+}
+.diferenciais__container div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 350px;
+  margin: 10px;
+}
+.diferenciais__container h3 {
+  margin: 10px 0;
+  color: #b5b8ff;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.diferenciais__container p {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 200;
+}
+.diferenciais__container img {
+  width: 35px;
+  margin-bottom: 20px;
+}
 
 @media (max-width: 885px) {
   .home__text {
