--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -113,6 +113,7 @@
     float: left;
   }
   .header__nav a {
+    padding-bottom: 10px;
     color: #f2f2f2;
   }
   .header.sticky {
@@ -120,7 +121,6 @@
   }
 
   .header__nav a:hover {
-    border-bottom: 1px solid #5c6dd0;
     background-color: transparent;
   }
 
