--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -26,14 +26,7 @@
   color: #5c6dd0;
   font-size: 60px;
 }
-.diferenciais {
-  background: linear-gradient(
-    180deg,
-    #011126 0%,
-    #42628c 56.59%,
-    #5c6dd0 101.54%
-  );
-}
+
 .diferenciais__title h2 {
   padding: 70px 0;
   margin: 20px 0;
@@ -50,8 +43,15 @@
   flex-wrap: wrap;
   justify-content: space-evenly;
   padding-bottom: 200px;
+  background: linear-gradient(
+    180deg,
+    #011126 0%,
+    #42628c 56.59%,
+    #5c6dd0 101.54%
+  );
 }
-.diferenciais__container div {
+.diferenciais__container div,
+.diferenciais__icons div {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,6 +72,62 @@
 .diferenciais__container img {
   width: 35px;
   margin-bottom: 20px;
+}
+.diferenciais__icons {
+  background-color: #f2f2f2;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 100px 0;
+}
+.diferenciais__icons div {
+  width: 450px;
+}
+.diferenciais__title-hr {
+  border: 0;
+  height: 2px;
+  background-image: linear-gradient(
+    to right,
+    transparent,
+    #42628c,
+    transparent
+  );
+}
+.diferenciais__icons h3 {
+  margin: 10px 0;
+  color: #42628c;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.diferenciais__icons p {
+  text-align: justify;
+  font-size: 20px;
+  font-weight: 200;
+  color: #011126;
+  padding-bottom: 60px;
+}
+.vantagens {
+  padding: 20px 0;
+  margin-bottom: 30px;
+}
+
+.vantagens div {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.vantagens__title {
+  padding: 70px 0;
+  margin: 20px 0;
+  text-align: center;
+  font-weight: 200;
+  font-size: 40px;
+}
+.vantagens__title span {
+  color: #b5b8ff;
+  font-weight: 700;
 }
 
 @media (max-width: 885px) {
