--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -110,12 +110,35 @@
 .vantagens {
   padding: 20px 0;
   margin-bottom: 30px;
+  display: flex;
+ flex-direction: column;
 }
 
 .vantagens div {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-start;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
+.vantagens figure,
+.vantagens ul{
+  width: 400px;
+}
+
+.vantagens h4{
+  color: #A0C3D9;
+  margin: 10px 0;
+  border-bottom: 1px solid #B5B8FF;
+  padding-bottom: 5px;
+  width: 160px;
+}
+
+.vantagens li{
+  font-weight: lighter;
+  font-size: 16px;
+  text-align: justify;
 }
 
 .vantagens__title {
@@ -129,6 +152,7 @@
   color: #b5b8ff;
   font-weight: 700;
 }
+
 
 @media (max-width: 885px) {
   .home__text {
