--- a/css/headerStyle.css
+++ b/css/headerStyle.css
@@ -30,8 +30,8 @@
 }
 
 .header__logo {
-  width: 50px;
-  margin: 20px 0px 20px 20px;
+  width: 40px;
+  margin: 10px; 
 }
 
 .header__nav a {
@@ -51,7 +51,7 @@
 .responsiveMenuHamb {
   cursor: pointer;
   float: right;
-  padding: 40px 20px;
+  padding: 15px;
 }
 
 .responsiveMenuHamb__line {
