--- a/css/login.css
+++ b/css/login.css
@@ -2,11 +2,12 @@
 .loginBox {
     background: #A0C3D9;
     background: #A0C3D9;
-    margin-top: 6%;
+    margin-top: 20%;
     width: 43%;
     margin-left: 27%;
     padding: 12px;
     border-radius: 7px; 
+    margin-bottom: 25%;
   }
   
   .loginBox .logo {
@@ -32,7 +33,7 @@
   
   @media (max-width: 477px) {
     .loginBox {
-      margin-top: 16%;
+      margin-top: 20%;
       padding: 12px;
       margin-left: 0%;
       width: 100%;
