--- a/css/empresaStyle.css
+++ b/css/empresaStyle.css
@@ -2,18 +2,18 @@
     width: 65px;
 }
 .titulo_valores{
-    font-family: Karla;
     font-size: 24px;
-    font-weight: 700;
     letter-spacing: 0.1em;
     text-align: left;
     color: #000C79;
 }
 .texto_valores{
-    font-family: Karla;
     font-size: 36px;
-    font-weight: 700;
     letter-spacing: 0.1em;
     text-align: left;
     color: #000000;
+}
+
+.title-blue {
+    color: #A0C3D9 !important;
 }
