--- a/css/empresaStyle.css
+++ b/css/empresaStyle.css
@@ -5,7 +5,7 @@
     font-size: 24px;
     letter-spacing: 0.1em;
     text-align: left;
-    color: #000C79;
+    color: #021E73 !important;
 }
 .texto_valores{
     font-size: 16px !important;
@@ -36,8 +36,9 @@
     padding: 80px 0 30px 0;
     margin: 25px 0 20px 0;
     text-align: center;
-    font-weight: 200;
+    font-weight: 300;
     font-size: 40px;
+    color: #021E73;
     
 }
 .empresa_title_span {
